--- a/Project3_FE/src/scenes/ServicesPage/ServicesPage.css
+++ b/Project3_FE/src/scenes/ServicesPage/ServicesPage.css
@@ -1,3 +1,6 @@
-.ServicesPage {
-    margin:30px;
+.Services {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 60px;
+    margin-right:60px;
 }
