--- a/Project3_FE/src/scenes/SignUpPage/SignupPage.css
+++ b/Project3_FE/src/scenes/SignUpPage/SignupPage.css
@@ -1,11 +1,10 @@
 @media all and (min-width: 480px) {
-    .LoginPage {
+    .SignupPage {
         padding: 60px 0;
     }
 
-    .LoginPage form {
+    .SignupPage form {
         margin: 0 auto;
-        max-width: 320px;
+        max-width: 620px;
     }
 }
-
