--- a/Project3_FE/src/scenes/ProductsPage/components/Product.css
+++ b/Project3_FE/src/scenes/ProductsPage/components/Product.css
@@ -1,11 +1,12 @@
-.Product {
+
+/*.Product {
     display: inline-block;
     width: 31%;
     margin: 1%;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
     padding: 16px;
-}
+}*/
 
 
 
