--- a/Project3_FE/src/scenes/AddServicePage/AddServicePage.css
+++ b/Project3_FE/src/scenes/AddServicePage/AddServicePage.css
@@ -8,3 +8,21 @@
         max-width: 620px;
     }
 }
+
+
+.imgPreview {
+    width: 100%;
+    height: 260px;
+
+    margin-top: 35px;
+    margin-bottom: 35px;
+    text-align: center;
+
+}
+
+img {
+    width: 60%;
+    height: 260px;
+}
+
+
