--- a/Project3_FE/src/scenes/AddServicePage/AddServicePage.css
+++ b/Project3_FE/src/scenes/AddServicePage/AddServicePage.css
@@ -12,17 +12,10 @@
 
 .imgPreview {
     width: 100%;
-    height: 260px;
+    height: 100%;
 
     margin-top: 35px;
     margin-bottom: 35px;
     text-align: center;
 
 }
-
-img {
-    width: 60%;
-    height: 260px;
-}
-
-
