--- a/Project3_FE/src/scenes/EditServicePage/EditServicePage.css
+++ b/Project3_FE/src/scenes/EditServicePage/EditServicePage.css
@@ -8,3 +8,16 @@
         max-width: 620px;
     }
 }
+
+
+.imgPreview {
+    width: 100%;
+    height: 100%;
+
+    margin-top: 35px;
+    margin-bottom: 35px;
+    text-align: center;
+
+}
+
+
